resources/grammar.txt
<type> ::= 'int' | 'bool' | 'char' | 'string' | 'null'
    | <type> '->' <type>
    | '('[<type>[','<type>]*]')' '->' '('[<type>[','<type>]*]')'
    | 'list''['<type>']'
    | 'dict''['<type>','<type>']'
    | 'tuple''['<type>[','<type>]*']'
    | 'schema'
    | 'union''['<type>[','<type>]*']'
    | 'table'
    | <ident>

<literal> ::= <int> | <bool> | <char> | <string> | <null> | <range>
<int> ::= [integer]
<bool> ::= 'true' | 'false'
<char> ::= '''[character]'''
<string> ::= '"'[character]*'"'
<null> ::= 'null'
<range> ::= <int>'..'<int>

<atom> ::= <literal>
    | '('<smp>')'
    | <ident>['.'<ident>]

<param> ::= <ident>[':' <type>]
<lambda> ::= '|'[<param>[','<param>]*]'|' '->' <type> '{'<exp>'}'

<app> ::= <atom>['('[<smp>[','<smp>]*]')']

<pattern> ::= <ident>':'<type> ['if' <smp>] | <literal>['|'<literal>]* | <range> | '_'
<match> ::= 'match' <atom> '{' 'case' <pattern> '=>' <smp>[',''case' <pattern> '=>' <smp>]*'}'

<collection> ::= '['[<smp>[':'<smp>][','<smp>[':'<smp>]]*]']'

<tight> ::= <app>['|>'<app>]
    | <collection>
    | '('<smp>')'
    | '{'<exp>'}'

<arithOp> ::= '+' | '-' | '*' | '/' | '%' |
<boolOp> ::= '<' | '>' | '<=' | '>=' | '==' | 'not' | 'and' | 'or'
<op> ::= <arithOp> | <boolOp> | '++'

<utight> ::= [<op>]<tight>

<alias> ::= 'alias' <ident> '=' <type>

<smp> ::= <utight>[<op><utight>]
    | 'if' '('<smp>')' '{' <exp> '}' ['else' '{' <exp> '}']
    | 'for' <ident> in <smp> '{' <exp> '}'
    | <collection>['++' <tight>]
    | '('<smp>[','<smp>]')'
    | '$''{'<ident>':'<type>[','<ident>':'<type>]*'}'
    | <match>
    | <lambda>
    | <alias>

<exp> ::= <smp>[';'<_exp>]
    | 'let' <ident> [':' <type>] '=' <smp>';'<exp>
